tests/baselines/reference/importedModuleAddToGlobal.errors.txt
importedModuleAddToGlobal.ts(3,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importedModuleAddToGlobal.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importedModuleAddToGlobal.ts(13,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importedModuleAddToGlobal.ts(15,23): error TS2833: Cannot find namespace 'b'. Did you mean 'B'?


==== importedModuleAddToGlobal.ts (4 errors) ====
    // Binding for an import statement in a typeref position is being added to the global scope
    // Shouldn't compile b.B is not defined in C
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import b = B;
        import c = C;
    }
    
    module B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import a = A;
        export class B { }
    }
    
    module C {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import a = A;
        function hello(): b.B { return null; }
                          ~
!!! error TS2833: Cannot find namespace 'b'. Did you mean 'B'?
!!! related TS2728 importedModuleAddToGlobal.ts:8:8: 'B' is declared here.
    }